fix error hero horizontal scroll with body overlow-x:hidden

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -56,6 +56,7 @@ body {
   color: #9698a6;
   line-height: 1.3;
   min-height: 300vh;
+  overflow-x: hidden;
 }
 @media (min-width: 64em) {
   body {
